Adding route, front end, and updated seed
